--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Session/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Session/Index.cshtml
@@ -7,6 +7,7 @@
 @model Session
 
 <div class="container">
+
     <div class="box">
         <div class="box-header">
             <h2 class="col-sm-10">Manage Session</h2>
@@ -15,53 +16,72 @@
                 <span>Edit</span>
             </a>
         </div>
-        <div class="box-body">
-            <div class="col-sm-10">
-                <div class="row">
-                    <div class="col-sm-4">
-                        <label class="name-title">Name</label>
-                    </div>
-                    <div class="col-sm-8">@Html.Raw(Model.Name)</div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-4">
-                        <label class="name-title">Start Time</label>
-                    </div>
-                    <div class="col-sm-8">@Html.Raw(Model.StartTime)</div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-4">
-                        <label class="name-title">End Time</label>
-                    </div>
-                    <div class="col-sm-8 evtinfo">@Html.Raw(Model.EndTime)</div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-4">
-                        <label class="name-title">Description</label>
-                    </div>
-                    <div class="col-sm-8 evtinfo">@Html.Raw(Model.Description)</div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-4">
-                        <label class="name-title">Livestream Url</label>
-                    </div>
-                    <div class="col-sm-8 evtinfo"></div>
-                </div>
-
-            </div>
-
-        </div>
     </div>
     <table class="table table-hover table-bordered" id="tblSession">
         <thead>
             <tr>
                 <th>Session Name</th>
-                <th>Start Time</th>
-                <th>End Time</th>
+                <th>Start Time - End Time</th>
+                <th>Description</th>
+                <th>Function</th>
             </tr>
         </thead>
     </table>
 </div>
+
+
+<!-- Modal -->
+<div id="modalUpdateSession" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Modal Header</h4>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label class="col-sm-3 form-control-label">
+                        Name<span class="required">*</span>
+                    </label>
+                    <div class="col-sm-9 input-group">
+                        <div class="input-group-addon">
+                            <i class="fa fa-briefcase" aria-hidden="true"></i>
+                        </div>
+                        <input id="sessionName" type="text" class="form-control" placeholder="Enter Session's name">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-3 form-control-label">
+                        Start Time - End Time<span class="required"></span>
+                    </label>
+                    <div class="col-sm-9 input-group">
+                        <div class="input-group-addon">
+                            <i class="fa fa-briefcase" aria-hidden="true"></i>
+                        </div>
+                        <input id="startEndTime" type="text" class="form-control" placeholder="Enter Session's name">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-3 form-control-label">Description</label>
+                    <div class="col-sm-9 input-group">
+                        <div class="input-group-addon">
+                            <i class="fa fa-info" aria-hidden="true"></i>
+                        </div>
+                        <input id="sessionDescription" type="text" class="form-control" placeholder="Enter Description">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="btn-update-session" class="btn btn-primary" data-dismiss="modal">Save</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<input type="hidden" id="txtSessionId" value="" />
 
 @section scripts {
     <script>
@@ -75,25 +95,65 @@
                     {
                         name: "name",
                         render: function (data, type, row) {
-                            console.log(row);
                             return row.name;
                         }
                     },
                     {
-                        name: "startTime",
+                        name: "startTime - End Time",
                         render: function (data, type, row) {
-                            return row.startTime;
+                            return row.startTime + " - " + row.endTime;
                         }
                     },
                     {
-                        name: "endTime",
+                        name: "Description",
                         render: function (data, type, row) {
-                            return row.endTime;
+                            return row.description;
+                        }
+                    },
+                    {
+                        name: "Function",
+                        render: function (data, type, row) {
+                            return '<button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#modalUpdateSession" onclick="openModelUpdate(' + row.sessionID +',\'' + row.name + '\', \'' + row.startTime + '\', \'' + row.endTime + '\', \'' + row.description + '\')"><i class="fa fa-pencil"></i></button>     ' +
+                                '<button class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></button>';
                         }
                     }
                 ]
             });
+
+
+            //Date range picker
+            $('#startEndTime').daterangepicker();
+
+
+            //Save update session
+            $('#btn-update-session').on('click', function () {
+                $.ajax({
+                    url: 'api/session/UpdateSession',
+                    method: "POST",
+                    data: {
+                        SessionID: $('#txtSessionId').val(),
+                        Name: $('#sessionName').val(),
+                        Description: $('#sessionDescription').val()
+                    },
+                    success: function (data) {
+                        $('#tblSession').DataTable().ajax.reload();
+                    },
+                    error: function (data) {
+                        console.log(data);
+                    }
+                });
+            });
         });
+
+
+        function openModelUpdate(id,name, startTime, endTime, description) {
+            $('#sessionName').val(name);
+            $('#sessionDescription').val(description);
+            $('#startEndTime').val(startTime + " - " + endTime);
+            $('#txtSessionId').val(id);
+        }
+
+
     </script>
 }
 
